# domik

./: Cargo.toml  Cargo_BACKUP_84755.toml  Cargo_LOCAL_84755.toml  Cargo_REMOTE_84755.toml  Makefile  Makefile.orig  Makefile~  README.md  Trunk.toml  domik.d.ts  domik.js  domik_bg.wasm  domik_bg.wasm.d.ts  index.html  sw.js
.github/workflows/: pages.yml
SoundFonts/: Organ Chorus.SF2  Piano Grand.SF2  Soul Ahhs.SF2  Soul Oohs.SF2  String Marcato.SF2  Trombone.SF2  World Vox.SF2
assets/: index.html  manifest.json  starter.js  styles.css  sw.js
src/: base_domik_view.rs  console_log.rs  example_view.rs  log_view.rs  main.rs  raadbg.rs  root_app.rs  sound_check.rs  test_view.rs  ~raadbg.rs~
src/audio_core/: audio_core_parameters.rs  mod.rs  render_holder.rs
src/audio_wrapper/: mod.rs  render_holder.rs
src/domik_ui_elements/: mod.rs
src/midi_audio/: audio_device_parameters.rs  mod.rs  render_holder.rs
src/midi_lib/: midi_message.rs  midi_receiver.rs  midi_sequence.rs  mod.rs
src/midi_sequencer/: mod.rs
src/player_to_audio/: midi_sequencer.rs  mod.rs  uni_source_variant.rs
src/player_to_audio/audio_core/: audio_core_parameters.rs  mod.rs  render_holder.rs
src/player_to_audio/midi_lib/: midi_sequence.rs  mod.rs
src/player_to_audio/synths/: rusty_synth_wrapper.rs  simple_synth.rs
src/synth_wrapper/: mod.rs  synth_variant.rs  synth_variant.rs~
src/synths/: mod.rs  rusty_synth_wrapper.rs  simple_synth.rs
src~/: main.rs
src~/player_to_audio/: mod.rs  uni_source_variant.rs
src~/player_to_audio/audio_core/: audio_core_parameters.rs  mod.rs
(+2 files in other folders)
