[package]
name = "domik"
version = "0.2.0"
edition = "2021"


[dependencies]
#raalog = { path="../../develop/raalog/" }
#raalog = { git = "https://github.com/AlexanderARodin/raalog.git", branch="dev" }
raalog = { git = "https://github.com/AlexanderARodin/raalog.git", tag="v0.2.0" }

audio_server = { path = "../audio_server/" }

egui = "0.24.0"
eframe = { version = "0.24.0", default-features = false, features = [
	"default_fonts",
	"glow",
	"persistence",
]}
serde = { version = "1", features = ["derive"] }

tinyaudio = "0.1.1"
rustysynth = "1.2.0"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
